# hitokoto-desktop-ng

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
hack/: build.sh
include/: conf.h  hitokotowidget.h
resources/: icon.icns  systray.qrc
src/: conf.cpp  hitokotowidget.cpp  hitokotowidget.ui
